force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Condition__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Condition__c</fullName>
    <label>Condition</label>
    <length>150</length>
    <type>Text</type>
</CustomField>