force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__License_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__License_Number__c</fullName>
    <label>License No.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>