force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Make__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Make__c</fullName>
    <label>Make</label>
    <length>20</length>
    <type>Text</type>
</CustomField>