force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Model__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Model__c</fullName>
    <label>Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>