force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Notice_Date__c</fullName>
    <label>Notice Date</label>
    <type>Date</type>
</CustomField>