force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Owner__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles as Vehicle Owner</relationshipLabel>
    <relationshipName>Vehicles_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>