force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Reclaim_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Reclaim_Date__c</fullName>
    <label>Reclaim Date</label>
    <type>Date</type>
</CustomField>