force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Remarks__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Remarks__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>