force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Sticker_Expiration__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sticker_Expiration__c</fullName>
    <description>Month/Year MM/YYYY</description>
    <label>Sticker Expiration Month/Year</label>
    <length>7</length>
    <type>Text</type>
</CustomField>