force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Sticker_Expiration_Full__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sticker_Expiration_Full__c</fullName>
    <label>Sticker Expiration</label>
    <type>Date</type>
</CustomField>