force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Sticker_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sticker_Serial_Number__c</fullName>
    <label>Sticker Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>