force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Tow_Charge__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Tow_Charge__c</fullName>
    <label>Tow Charge</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>