force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Tow_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Tow_Date__c</fullName>
    <label>Tow Date</label>
    <type>Date</type>
</CustomField>