force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Tow_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Tow_Number__c</fullName>
    <label>Tow Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>