force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__VIN2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__VIN2__c</fullName>
    <externalId>true</externalId>
    <label>VIN</label>
    <length>17</length>
    <type>Text</type>
</CustomField>