force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__VIN__c.field-meta.xml
<CustomField>
    <fullName>MUSW__VIN__c</fullName>
    <label>VIN Old</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>