force-app/main/default/objects/MUSW__Vehicle__c/fields/MUSW__Year__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Year__c</fullName>
    <inlineHelpText>YYYY</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>